# =========== Workspace configuration ===========
[workspace]
members = [
    "calyx-ir",
    "calyx-utils",
    "calyx-opt",
    "calyx-frontend",
    "interp",
    "web/rust",
    "tools/data_gen",
    "cider-dap",
]
exclude = ["site"]

[workspace.package]
authors = ["The Calyx Team"]
license-file = "LICENSE"
keywords = ["ir", "compiler"]
repository = "https://github.com/cucapra/calyx"
readme = "README.md"
description = "Compiler Infrastructure for Hardware Accelerator Generation"
categories = ["compilers"]
homepage = "https://calyxir.org"
edition = "2021"
version = "0.4.0"
rust-version = "1.66"

[workspace.dependencies]
itertools = "0.10"
atty = "0.2.14"
log = "0.4.14"
string-interner = "0.14.0"
lazy_static = "1"
linked-hash-map = "0.5"
smallvec = "1"
serde = { version = "1.0", features = ["derive"] }
serde_sexpr = "0.1.0"
serde_with = "3.0.0"
pest = "2.0"
pest_derive = "2"
pest_consume = "1"
argh = "0.1"
calyx-utils = { path = "calyx-utils", version = "0.4.0" }
calyx-ir = { path = "calyx-ir", version = "0.4.0" }
calyx-frontend = { path = "calyx-frontend", version = "0.4.0" }
calyx-opt = { path = "calyx-opt", version = "0.4.0" }

[workspace.dependencies.petgraph]
version = "0.6"
default-features = false
features = ["matrix_graph"]

# =========== Package configuration ===========

[package]
name = "calyx"
build = false
default-run = "calyx"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
license-file.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
readme.workspace = true
rust-version.workspace = true

[[bin]]
name = "calyx"
path = "src/main.rs"

[[bin]]
name = "futil"
path = "src/futil.rs"

[features]
default = []
serialize = ["dep:serde_with", "calyx-ir/serialize", "dep:serde_sexpr", "serde/rc"]

[dependencies]
atty.workspace = true
itertools.workspace = true
log.workspace = true
serde.workspace = true
serde_with = { workspace = true, optional = true }
serde_sexpr = { workspace = true, optional = true }
argh.workspace = true
csv = "1.1"
vast = "0.3.1"

calyx-utils.workspace = true
calyx-ir.workspace = true
calyx-frontend.workspace = true
calyx-opt.workspace = true

[dependencies.quick-xml]
version = "0.28"
default-features = false
features = ["serialize"]

[dependencies.env_logger]
version = "0.9.0"
features = ["termcolor", "atty"]
default-features = false

[profile.release]
lto = "thin"

# = ========== Benchmarks ===========
[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
calyx-ir = { path = "calyx-ir" }
calyx-opt = { path = "calyx-opt" }
calyx-frontend = { path = "calyx-frontend" }

[[bench]]
name = "component-sharing"
harness = false
