# =========== Workspace configuration ===========
[workspace]
members = [
    # Core Calyx crates
    "calyx/ir",
    "calyx/utils",
    "calyx/opt",
    "calyx/frontend",
    "calyx/stdlib",
    "calyx/backend",

    # Cider crates
    "cider",
    "cider/idx",
    "cider/dap",

    # Fud2
    "fud2",
    "fud2/fud-core",

    # Misc tools
    "tools/data-conversion",
    "tools/calyx-pass-explorer",
    "tools/cider-data-converter",
    "tools/component_cells",
    "tools/yxi",
    "tools/calyx-writer",
    "tools/data_gen",
    "calyx-lsp",

    # Playground crate
    "web/rust",
]
exclude = ["site"]

[workspace.package]
authors = ["The Calyx Team"]
license-file = "LICENSE"
keywords = ["ir", "compiler"]
repository = "https://github.com/calyxir/calyx"
readme = "README.md"
description = "Compiler Infrastructure for Hardware Accelerator Generation"
categories = ["compilers"]
homepage = "https://calyxir.org"
edition = "2021"
version = "0.7.1"
rust-version = "1.80"

[workspace.dependencies]
# Internal crates
calyx-utils = { path = "calyx/utils", version = "0.7.1" }
calyx-ir = { path = "calyx/ir", version = "0.7.1" }
calyx-frontend = { path = "calyx/frontend", version = "0.7.1" }
calyx-opt = { path = "calyx/opt", version = "0.7.1" }
calyx-backend = { path = "calyx/backend", version = "0.7.1" }
cider = { path = "cider", version = "0.1.0" }
cider-idx = { path = "cider/idx", version = "0.1.0" }
cider-dap = { path = "cider/dap", version = "0.1.0" }

# External crates
# When adding a new dependency, do not pin the minor version, i.e., use `0.1`
# instead of `0.1.0`
itertools = "0.11"
atty = "0.2"
log = "0.4"
string-interner = "0.14.0"
lazy_static = "1"
linked-hash-map = "0.5"
smallvec = { version = "1", features = ["const_generics"] }
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_sexpr = "0.1.0"
serde_with = "3"
thiserror = "1.0"
pest = "2"
pest_derive = "2"
pest_consume = "1"
argh = "0.1"
anyhow = "1"
slog = "2.7"
slog-term = "2.8"
slog-async = "2.7"
ahash = "0.8"
baa = { version = "0.16.0", features = ["bigint", "serde1", "fraction1"] }

[workspace.dependencies.petgraph]
version = "0.6"
default-features = false
features = ["matrix_graph"]

[workspace.dependencies.env_logger]
version = "0.9.0"
features = ["termcolor", "atty"]
default-features = false


# =========== Package configuration ===========

[package]
name = "calyx"
default-run = "calyx"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
license-file.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
readme.workspace = true
rust-version.workspace = true
build = "src/build.rs"

[[bin]]
name = "calyx"
path = "src/main.rs"

[features]
default = []
serialize = ["calyx-ir/serialize", "serde/rc", "calyx-backend/sexp"]

[build-dependencies]
calyx-stdlib = { path = "calyx/stdlib", version = "0.7.1" }

[dependencies]
atty.workspace = true
itertools.workspace = true
log.workspace = true
serde.workspace = true
argh.workspace = true
env_logger.workspace = true

calyx-utils.workspace = true
calyx-ir.workspace = true
calyx-frontend.workspace = true
calyx-opt.workspace = true

[dependencies.calyx-backend]
workspace = true
features = ["mlir", "resources", "xilinx"]

[profile.release]
lto = "thin"

# = ========== Benchmarks ===========
[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
calyx-ir = { path = "calyx/ir" }
calyx-opt = { path = "calyx/opt" }
calyx-frontend = { path = "calyx/frontend" }

[[bench]]
name = "component-sharing"
harness = false


[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3
