[package]
name = "calyx-backend"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
license-file.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
# TODO(cgyurgyik): half-baked; these should be opt-in.
main_error = "0.1.2"
egglog = { git = "https://github.com/egraphs-good/egglog", rev = "bcb73752f7bb71296bd9b42f5b2769f9e8f478b1" }
egraph-serialize = "0.1.0"
tempfile = "3.10.1"

log.workspace = true
petgraph.workspace = true
string-interner.workspace = true
itertools.workspace = true
linked-hash-map.workspace = true
serde = { workspace = true }
serde_json.workspace = true
serde_with = { workspace = true, optional = true }
serde_sexpr = { workspace = true, optional = true }
smallvec.workspace = true

calyx-utils.workspace = true
calyx-frontend.workspace = true
calyx-ir.workspace = true

csv = { version = "1.1", optional = true }
vast = "0.3.1"

[dependencies.quick-xml]
version = "0.30"
features = ["serialize"]
default-features = false
optional = true

[features]
default = []
mlir = []
xilinx = ["dep:quick-xml"]
resources = ["dep:csv"]
sexp = ["dep:serde_with", "dep:serde_sexpr", "serde/rc", "calyx-ir/serialize"]
yxi = ["calyx-ir/yxi"]
