[package]
name = "calyx-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty.workspace = true
lazy_static.workspace = true
linked-hash-map.workspace = true
log.workspace = true
smallvec.workspace = true
pest.workspace = true
pest_derive.workspace = true
pest_consume.workspace = true

calyx-utils = { path = "../calyx-utils" }
