[package]
name = "calyx-frontend"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
license-file.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
serialize = ["serde/derive", "dep:serde_with"]

[dependencies]
atty.workspace = true
lazy_static.workspace = true
linked-hash-map.workspace = true
log.workspace = true
serde = { workspace = true, optional = true }
serde_with = { workspace = true, optional = true }
smallvec.workspace = true
pest.workspace = true
pest_derive.workspace = true
pest_consume.workspace = true
itertools.workspace = true

calyx-utils.workspace = true

strum_macros = "0.25"
strum = "0.25"
