[package]
name = "calyx-ir"
version = "0.1.1"
edition.workspace = true
description.workspace = true
authors.workspace = true
license-file.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
log.workspace = true
petgraph.workspace = true
string-interner.workspace = true
itertools.workspace = true
linked-hash-map.workspace = true
smallvec.workspace = true

calyx-utils = { path = "../calyx-utils", version = "0.1.1" }
calyx-frontend = { path = "../calyx-frontend", version = "0.1.1" }