[package]
name = "calyx-opt"
version = "0.1.1"
authors = [ "The Calyx Team" ]
edition = "2021"
build = false
license-file = "LICENSE"
keywords = ["IR", "compiler"]
repository = "https://github.com/cucapra/calyx"
readme = "README.md"
description = "Intermediate Representation for Hardware Accelerator Generation"
categories = ["compilers"]
rust-version = "1.66"

[lib]
crate-type = ["rlib"]

[dependencies]
linked-hash-map.workspace = true
itertools.workspace = true
petgraph.workspace = true
log.workspace = true
lazy_static.workspace = true
smallvec.workspace = true
serde.workspace = true

boolean_expression = "=0.4.1"
serde_json = "1.0.79"

calyx-ir = { path = "../calyx-ir" }
calyx-utils = { path = "../calyx-utils" }