[package]
name = "calyx-opt"
version = "0.1.1"
edition.workspace = true
description.workspace = true
authors.workspace = true
license-file.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
readme.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
linked-hash-map.workspace = true
itertools.workspace = true
petgraph.workspace = true
log.workspace = true
lazy_static.workspace = true
smallvec.workspace = true
serde.workspace = true

boolean_expression = "=0.4.1"
serde_json = "1.0.79"

calyx-ir = { path = "../calyx-ir", version = "0.1.1" }
calyx-utils = { path = "../calyx-utils", version = "0.1.1" }