[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "calyx-ast"
authors = [{ name = "The Calyx Authors" }]
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">=3.4"
urls.Source = "https://github.com/calyxir/calyx"

[tool.flit.module]
name = "calyx"
