[package]
name = "calyx-utils"
version = "0.1.0"
edition = "2021"

[features]
default = []
serialize = ["dep:serde", "symbol_table/serde"]

[dependencies]
serde = { workspace = true, features = ["derive"], optional = true }
atty.workspace = true
string-interner.workspace = true
itertools.workspace = true
petgraph.workspace = true
symbol_table = { version = "0.3", features = ["global"] }
