[package]
name = "calyx-utils"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
license-file.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
readme.workspace = true

[features]
default = []
serialize = ["dep:serde", "symbol_table/serde"]

[dependencies]
serde = { workspace = true, features = ["derive"], optional = true }
serde_json.workspace = true
atty.workspace = true
string-interner.workspace = true
itertools.workspace = true
petgraph.workspace = true
symbol_table = { version = "0.3", features = ["global"] }
