[package]
name = "calyx"
version = "0.1.0"
authors = [ "The Calyx Team" ]
edition = "2018"
build = false
license-file = "../LICENSE"
keywords = ["IR", "compiler"]
repository = "https://github.com/cucapra/calyx"
readme = "../README.md"
description = "Intermediate Representation for Hardware Accelerator Generation"
categories = ["compilers"]

[lib]
crate-type = ["rlib"]

[dependencies]
petgraph = "0.5.0"
atty = "0.2.14"
derivative = "2"
pest = "2"
pest_derive = "2"
pest_consume = "1"
itertools = "0.10"
lazy_static = "1"
boolean_expression = "=0.4.1"
linked-hash-map = "0.5"
smallvec = "1"
serde = { version = "1.0", features = ["derive"] }
