[package]
name = "calyx"
version = "0.1.1"
authors = [ "The Calyx Team" ]
edition = "2021"
build = false
license-file = "LICENSE"
keywords = ["IR", "compiler"]
repository = "https://github.com/cucapra/calyx"
readme = "README.md"
description = "Intermediate Representation for Hardware Accelerator Generation"
categories = ["compilers"]
rust-version = "1.66"

[lib]
crate-type = ["rlib"]

[dependencies]
atty = "0.2.14"
pest_derive = "2"
pest_consume = "1"
itertools = "0.10"
lazy_static = "1"
boolean_expression = "=0.4.1"
linked-hash-map = "0.5"
smallvec = { version = "1.10.0", features = [ "const_generics"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = "2.2.0"
serde_json = "1.0.79"
string-interner = "0.14.0"

[dependencies.pest]
version = "2"
default-features = false

[dependencies.petgraph]
version = "0.6"
default-features = false
features = ["matrix_graph"]

[dependencies.log]
version = "0.4"
default-features = false
features = []
