[package]
name = "calyxc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty.workspace = true
itertools.workspace = true
log.workspace = true
serde.workspace = true
csv = "1.1"
argh = "0.1"
vast = "0.3.1"
quick-xml = { version = "0.22.0", default-features = false, features = [
    "serialize",
] }

calyx-utils = { path = "../calyx-utils" }
calyx-ir = { path = "../calyx-ir" }
calyx-frontend = { path = "../calyx-frontend" }
calyx-opt = { path = "../calyx-opt" }

[dependencies.env_logger]
version = "0.9.0"
features = ["termcolor", "atty"]
default-features = false
