[package]
name = "futil"
version = "0.1.0"
edition = "2021"

[dependencies]
atty.workspace = true
itertools.workspace = true
log.workspace = true
serde.workspace = true
argh.workspace = true
csv = "1.1"
vast = "0.3.1"

calyx-utils = { path = "../calyx-utils" }
calyx-ir = { path = "../calyx-ir" }
calyx-frontend = { path = "../calyx-frontend" }
calyx-opt = { path = "../calyx-opt" }

[dependencies.quick-xml]
version = "0.22.0"
default-features = false
features = [ "serialize" ]

[dependencies.env_logger]
version = "0.9.0"
features = ["termcolor", "atty"]
default-features = false
