[package]
name = "cider-dap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dap = { git = "https://github.com/sztomi/dap-rs", rev = "7be5376" }
thiserror = "1.*"
serde_json = "1.0"
serde.workspace= true
owo-colors = "^3.5"
argh = "0.1"

[[bin]]
name = "demo_client"
path = "src/demo_client.rs"

[[bin]]
name = "cider-dap"
path = "src/main.rs"


[net]
git-fetch-with-cli = true