[package]
name = "cider-dap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dap = { git = "https://github.com/sztomi/dap-rs", tag = "v0.3.1-alpha1" }
thiserror = "1.*"
serde_json = "1.0"
serde.workspace= true
owo-colors = "^3.5"
argh = "0.1"
slog = "2.7.0"
slog-term = "2.8.0"
slog-async = "2.7.0"

interp = { path = "../interp" }

[[bin]]
name = "cider-dap"
path = "src/main.rs"
