[package]
name = "cider"
version = "0.1.1"
authors = ["The Calyx authors"]
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "cider"
path = "src/main.rs"

[features]
data-race-stats = []

[dependencies]
smallvec = { workspace = true, features = ["union", "const_generics"] }
serde = { workspace = true, features = ["derive", "rc"] }
itertools.workspace = true
pest.workspace = true
pest_derive.workspace = true
pest_consume.workspace = true
argh.workspace = true
thiserror.workspace = true
slog.workspace = true
slog-term.workspace = true
slog-async.workspace = true
ahash.workspace = true
petgraph.workspace = true
calyx-ir.workspace = true
calyx-opt.workspace = true
calyx-frontend.workspace = true
calyx-utils = { workspace = true, features = ["serialize"] }
cider-idx.workspace = true
baa.workspace = true
serde_json.workspace = true
serde_with.workspace = true

owo-colors = { version = "4.1", features = ["supports-colors"] }
rustyline = "17.0.0"
fraction = { version = "0.15", features = ["with-serde-support"] }
num-bigint = "0.4"
num-traits = "0.2"
ciborium = "0.2"
fst-writer = "0.2"
bon = "3.9"
delegate = "0.13"
rand.workspace = true
mimalloc = { version = "*", features = ["v3"] }

[dev-dependencies]
proptest = "1.0"
