[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "fud"
author = "Samuel Thomas"
author-email = "sgt43@cornell.edu"
home-page = "https://github.com/cucapra/calyx/tree/fud/fud"
classifiers = ["License :: OSI Approved :: MIT License"]
description-file = "README.md"
requires-python = ">=3.4"
requires = [
  "appdirs",
  "toml",
  "halo",
  "termcolor",
  "packaging",
  "numpy",
  "simplejson",
  "networkx>=2.6"
]

[tool.flit.metadata.requires-extra]
remote = [
       "paramiko",
       "scp"
]
fpga = [
  "pyopencl==2021.2.8"
]

[tool.flit.scripts]
fud = "fud.main:main"
