[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fud"
authors = [
    {name = "Samuel Thomas", email = "sgt43@cornell.edu"}
]
readme = "README.md"
requires-python = ">=3.7"
dynamic = ["version", "description"]
license = "MIT"
dependencies = [
    "pybind11>=2.5.0",
    "appdirs",
    "toml",
    "halo",
    "termcolor",
    "packaging",
    "numpy",
    "simplejson",
    "networkx>=2.6",
]

[project.optional-dependencies]
remote = ["paramiko", "scp"]
fpga = ["pynq"]
