[package]
name = "fud"
version = "0.0.2"
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true

keywords = ["build-tool"]
readme = "README.md"
categories = ["build-tool"]
description = "Compiler driver for the Calyx infrastructure"

[features]
migrate_to_scripts = []
default = ["migrate_to_scripts"]

[dependencies]
fud-core = { path = "fud-core", version = "0.0.2", features = ["egg_planner"] }
anyhow.workspace = true
manifest-dir-macros = "0.1"
include_dir = "0.7"

[lib]
name = "fud2"
path = "src/lib.rs"

[[bin]]
name = "fud2"
path = "src/main.rs"

[dev-dependencies]
insta = "1.36.0"
itertools.workspace = true
figment = { version = "0.10.12", features = ["toml"] }
