[package]
name = "interp"
version = "0.1.1"
authors = ["The Calyx authors"]
edition = "2021"

[lib]
doctest = false # Don't run doc tests

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
change-based-sim = []
default = ["change-based-sim"]

[dependencies]
calyx = { path = "../calyx" }
bitvec = "1.0"
smallvec = { version = "1.6.1", features = ["union", "const_generics"] }
base64 = "0.13.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
itertools = "0.10.1"
argh = "0.1.5"
rustyline = "=10.0.0"
fraction = { version = "0.11.0", features = ["with-serde-support"] }
thiserror = "1.0.26"
ibig = { version = "0.3.4", features = ["serde"] }
pest = "2.1.3"
pest_derive = "2.1.0"
pest_consume = "1.1.1"
lazy_static = "1.4.0"

slog = "2.7.0"
slog-term = "2.8.0"
slog-async = "2.7.0"

symbol_table = "0.3"
once_cell = "1.9.0"
[dev-dependencies]
proptest = "1.0.0"

[dependencies.serde_with]
version = "1.6.4"
