[package]
name = "interp"
version = "0.1.1"
authors = ["The Calyx authors"]
edition = "2021"
rust-version.workspace = true

[lib]
doctest = false # Don't run doc tests

[[bin]]
name = "cider"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
change-based-sim = []
default = ["change-based-sim"]

[dependencies]
smallvec = { workspace = true, features = ["union", "const_generics"] }
serde = { workspace = true, features = ["derive", "rc"] }
lazy_static.workspace = true
itertools.workspace = true
pest.workspace = true
pest_derive.workspace = true
pest_consume.workspace = true
argh.workspace = true
owo-colors = "^3.5"
bitvec = "1.0"
base64 = "0.13.0"
serde_json = "1.0"
rustyline = "=10.0.0"
fraction = { version = "0.11.0", features = ["with-serde-support"] }
thiserror = "1.0.26"
ibig = { version = "0.3.4", features = ["serde"] }
slog = "2.7.0"
slog-term = "2.8.0"
slog-async = "2.7.0"
ahash = "0.8.3"

once_cell = "1.9.0"
petgraph = "0.6.3"

calyx-ir = { path = "../calyx-ir" }
calyx-utils = { path = "../calyx-utils", features = ["serialize"] }
calyx-opt = { path = "../calyx-opt" }
calyx-frontend = { path = "../calyx-frontend" }

btor2i = { path = "../tools/btor2/btor2i" }

[dev-dependencies]
proptest = "1.0.0"

[dependencies.serde_with]
version = "1.6.4"
